--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,34 +2,38 @@ name: Docker Image CI with Tag
 
 on:
   push:
+    branches:
+      - main
     tags:
       - '*'
+  
 
 jobs:
   push_to_registry:
-    name: Push tagged docker image to dockerhub
+    name: Push tagged docker image to GitHub Container Registry
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
       
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ysde/docker-grafana-backup-tool
-
+          images: ghcr.io/${{ github.repository }}/grafana-backup-tool  
+  
       - name: Extract metadata (tags, labels) for Docker (Slim version)
         id: meta_slim
         uses: docker/metadata-action@v4
         with:
-          images: ysde/docker-grafana-backup-tool
+          images: ghcr.io/${{ github.repository }}/grafana-backup-tool-slim
           flavor: |
             latest=auto
             suffix=-slim,onlatest=true
