--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Docker Image CI with Tag
 on:
   push:
     branches:
-      - main
+      - master
     tags:
       - '*'
   workflow_dispatch:
