--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,17 +12,22 @@ on:
     tags:
       - '*'
   
-
 jobs:
   push_to_registry:
     name: Push tagged docker image to GitHub Container Registry
-    runs-on: ubuntu-latest
+    runs-on: gallis-gh-runner
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -30,13 +35,13 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}/grafana-backup-tool  
   
       - name: Extract metadata (tags, labels) for Docker (Slim version)
         id: meta_slim
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}/grafana-backup-tool-slim
           flavor: |
@@ -44,7 +49,7 @@ jobs:
             suffix=-slim,onlatest=true
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           push: true
           platforms: linux/amd64,linux/arm64
@@ -52,7 +57,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Docker image slim version
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           file: ./DockerfileSlim
           push: true
